--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -92,7 +92,7 @@
                 	let goodsId = localStorage.getItem("goodsId");
                 	if (goodsId) {
                 		localStorage.removeItem("goodsId");
-                		window.location.href = `/goods/detail/${goodsId}`;
+                		window.location.href = `/product/detail/${goodsId}`;
                 	} else {
                 		window.location.href = '/index';
                 	}
