--- a/src/main/resources/templates/pages/order-detail.html
+++ b/src/main/resources/templates/pages/order-detail.html
@@ -133,7 +133,7 @@
                                         <tr>
                                             <td class="col col-thumb">
                                                 <div class="figure figure-thumb">
-                                                    <a target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}">
+                                                    <a target="_blank" th:href="@{'/product/detail/'+${item.goodsId}}">
                                                         <img th:src="@{${item.goodsCoverImg}}"
                                                              width="80" height="80" alt="">
                                                     </a>
@@ -141,7 +141,7 @@
                                             </td>
                                             <td class="col col-name">
                                                 <p class="name">
-                                                    <a target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}"
+                                                    <a target="_blank" th:href="@{'/product/detail/'+${item.goodsId}}"
                                                        th:text="${item.goodsName}">newbee</a>
                                                 </p>
                                             </td>
