--- a/src/main/resources/templates/admin/goods.html
+++ b/src/main/resources/templates/admin/goods.html
@@ -180,6 +180,6 @@
 <!-- sweetalert -->
 <script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>
 <script th:src="@{/admin/dist/js/public.js}"></script>
-<script th:src="@{/admin/dist/js/goods.js}"></script>
+<script th:src="@{/admin/dist/js/product.js}"></script>
 </body>
 </html>
