--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -72,7 +72,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a th:href="@{/admin/goods}" th:class="${path}=='newbee_mall_goods'?'nav-link active':'nav-link'">
+                    <a th:href="@{/admin/product}" th:class="${path}=='newbee_mall_goods'?'nav-link active':'nav-link'">
                         <i class="fa fa-archive nav-icon" aria-hidden="true"></i>
                         <p>
                            Quản lý sản phẩm
@@ -80,7 +80,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a th:href="@{/admin/goodsDetail}" th:class="${path}=='newbee_mall_goods'?'nav-link active':'nav-link'">
+                    <a th:href="@{/admin/productDetail}" th:class="${path}=='newbee_mall_goods'?'nav-link active':'nav-link'">
                         <i class="fa fa-archive nav-icon" aria-hidden="true"></i>
                         <p>
                             Quản lý chi tiết sản phẩm
