--- a/src/main/resources/templates/pages/order-settle.html
+++ b/src/main/resources/templates/pages/order-settle.html
@@ -66,7 +66,7 @@
                                         <tr>
                                             <td class="col col-thumb">
                                                 <div class="figure figure-thumb">
-                                                    <a target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}">
+                                                    <a target="_blank" th:href="@{'/product/detail/'+${item.goodsId}}">
                                                         <img th:src="@{${item.goodsCoverImg}}"
                                                              width="80" height="80" alt="">
                                                     </a>
@@ -74,7 +74,7 @@
                                             </td>
                                             <td class="col col-name">
                                                 <p class="name">
-                                                    <a target="_blank" th:href="@{'/goods/detail/'+${item.goodsId}}"
+                                                    <a target="_blank" th:href="@{'/product/detail/'+${item.goodsId}}"
                                                        th:text="${item.goodsName}">Thu Dang Store</a>
                                                 </p>
                                             </td>
